change some ui things in admin panel

--- a/PsychoApp_AdminPanel/src/assets/i18n/en.json
+++ b/PsychoApp_AdminPanel/src/assets/i18n/en.json
@@ -19,6 +19,7 @@
     "DELETE_USER": "Delete User",
     "ADD_NEW_USER": "Add New User",
     "ENTER": "Enter",
-    "SUBMIT":"Submit"
+    "SUBMIT":"Submit",
+    "DELETE_SELECTED":"Delete selected"
   }
   
