--- a/PsychoApp_AdminPanel/src/assets/i18n/fa.json
+++ b/PsychoApp_AdminPanel/src/assets/i18n/fa.json
@@ -19,6 +19,7 @@
     "DELETE_USER": "حذف کاربر",
     "ADD_NEW_USER": "افزودن کاربر جدید",
     "ENTER": "وارد کردن",
-    "SUBMIT":"ثبت"
+    "SUBMIT":"ثبت",
+    "DELETE_SELECTED":"پاک کردن"
   }
   
