--- a/PsychoApp_AdminPanel/src/assets/i18n/fa.json
+++ b/PsychoApp_AdminPanel/src/assets/i18n/fa.json
@@ -20,6 +20,7 @@
     "ADD_NEW_USER": "افزودن کاربر جدید",
     "ENTER": "وارد کردن",
     "SUBMIT":"ثبت",
-    "DELETE_SELECTED":"پاک کردن"
+    "DELETE_SELECTED":"پاک کردن",
+    "REFRESH":"بروزرسانی"
   }
   
